[package]
name = "soda-test-service"
version = "0.2.0"
authors = ["Julian Didier <did.julian@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SODA Test Service helps with tracking test sessions"
repository="https://github.com/voyages-sncf-technologies/soda-test-service"
readme = "README.md"
keywords = ["soda", "selenium", "automation", "testing", "selenium-grid"]
exclude = [".gitignore", ".travis.yml"]
edition = "2018"

[badges]
travis-ci = { repository = "voyages-sncf-technologies/soda-test-service", branch = "master" }

[dependencies]
futures = { version = "0.3", features = ["compat"] }
hyper = "0.13.1"
